--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Objetivos do ano do Miguel Molo</title>
+    <title>Objetivos do ano_</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Objetivos do ano do Miguel Molo<span></span></h2>
+        <h2 class="titulo-principal">Objetivos do ano<span></span></h2>
         <div class="conteudos">
       <div class="botoes">
         <button class="botao ativo">Cursos na Alura</button>
